// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AntaresProtocol #subscribeRenderer config.name accepts { name:String } on the config object 1`] = `
Array [
  "JohnnyNull",
]
`;

exports[`AntaresProtocol #subscribeRenderer config.name defaults naming a renderer 'renderer_N' 1`] = `
Array [
  "JohnnyNull",
  "renderer_2",
  "JohnnyFive",
]
`;

exports[`AntaresProtocol #subscribeRenderer contains an entry on {results} for each synchronous renderer 1`] = `
Object {
  "action": Object {
    "type": "any",
  },
  "results": Map {
    "rememberMyName" => "syncReturnValue",
  },
  "resultsAsync": Map {},
}
`;

exports[`AntaresProtocol #subscribeRenderer exposes each processed action 1`] = `
Array [
  Object {
    "type": "rando 1",
  },
  Object {
    "type": "rando 2",
  },
]
`;

exports[`AntaresProtocol #subscribeRenderer synchronous (online) mode a renderer error propogates up to the caller of #process 1`] = `"Something you did just broke an Antares renderer"`;
